[tool.poetry]
name = "cloud-application-project"
version = "0.1.0"
description = "API de pedidos e itens — Projeto base do curso Move Tech"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
scalar-fastapi = "^1.8.2"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"]
